change dependencies version

--- a/bower.json
+++ b/bower.json
@@ -37,25 +37,25 @@
     "paper-toggle-button": "^1.1.2",
     "paper-toolbar": "^1.1.4",
     "paper-tooltip": "^1.1.2",
-    "things-ajax": "ThingsElements/things-ajax#latest",
-    "things-button": "ThingsElements/things-button#latest",
-    "things-full-dialog": "ThingsElements/things-full-dialog#latest",
-    "things-grid": "ThingsElements/things-grid#latest",
-    "things-meta": "ThingsElements/things-meta#latest",
-    "things-date-picker": "ThingsElements/things-date-picker#latest",
-    "things-input-field": "ThingsElements/things-input-field#latest",
-    "things-resource-combo": "ThingsElements/things-resource-combo#latest",
-    "things-tristate-checkbox": "ThingsElements/things-tristate-checkbox#latest",
-    "things-global-behavior": "ThingsElements/things-global-behavior#latest",
-    "things-fullscreen": "ThingsElements/things-fullscreen#latest",
-    "things-msg-box-behavior": "ThingsElements/things-msg-box-behavior#latest",
-    "things-spinner": "ThingsElements/things-spinner#latest",
+    "things-ajax": "ThingsElements/things-ajax",
+    "things-button": "ThingsElements/things-button",
+    "things-full-dialog": "ThingsElements/things-full-dialog",
+    "things-grid": "ThingsElements/things-grid",
+    "things-meta": "ThingsElements/things-meta",
+    "things-date-picker": "ThingsElements/things-date-picker",
+    "things-input-field": "ThingsElements/things-input-field",
+    "things-resource-combo": "ThingsElements/things-resource-combo",
+    "things-tristate-checkbox": "ThingsElements/things-tristate-checkbox",
+    "things-global-behavior": "ThingsElements/things-global-behavior",
+    "things-fullscreen": "ThingsElements/things-fullscreen",
+    "things-msg-box-behavior": "ThingsElements/things-msg-box-behavior",
+    "things-spinner": "ThingsElements/things-spinner",
     "iron-form": "^1.0.16"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
     "web-component-tester": "^4.0.0",
-    "things-setting": "ThingsElements/things-setting#^0.0.13",
+    "things-setting": "ThingsElements/things-setting",
     "iron-form": "^1.0.16"
   }
 }
