--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,6 @@
 {
   "name": "things-resource-selector",
-  "version": "0.1.59",
+  "version": "v2.0.0",
   "authors": [
     "Hatio Lab. <heartyoh@hatiolab.com>"
   ],
