대모 소스 및 resize 부분 및 CSS 수정

--- a/bower.json
+++ b/bower.json
@@ -51,7 +51,8 @@
     "things-fullscreen": "ThingsElements/things-fullscreen#master",
     "things-msg-box-behavior": "ThingsElements/things-msg-box-behavior#master",
     "things-spinner": "ThingsElements/things-spinner#master",
-    "paper-scroll-header-panel": "^2.0.0"
+    "paper-scroll-header-panel": "^2.0.0",
+    "things-grid-behavior": "ThingsElements/things-grid-behavior#^2.2.12"
   },
   "devDependencies": {
     "iron-component-page": "PolymerElements/iron-component-page#^1.0.0",
@@ -59,6 +60,9 @@
     "iron-demo-helpers": "^1.2.3",
     "paper-input": "PolymerElements/paper-input#^1.1.11",
     "things-theme": "ThingsElements/things-theme#^0.1.103",
-    "things-license-checker-min": "ThingsElements/things-license-checker-min#^2.5.0"
+    "things-license-checker-min": "ThingsElements/things-license-checker-min#^2.5.0",
+    "things-code-editor": "ThingsElements/things-code-editor#^2.2.0",
+    "things-splitter": "ThingsElements/things-splitter",
+    "iron-signals": "^1.0.3"
   }
 }
