--- a/bower.json
+++ b/bower.json
@@ -37,20 +37,20 @@
     "iron-icons": "^1.1.3",
     "iron-form-element-behavior": "^1.0.6",
     "iron-form": "^1.0.16",
-    "things-combo": "ThingsElements/things-combo#master",
-    "things-ajax": "ThingsElements/things-ajax#master",
-    "things-button": "ThingsElements/things-button#master",
-    "things-full-dialog": "ThingsElements/things-full-dialog#master",
-    "things-grid": "ThingsElements/things-grid#master",
-    "things-meta": "ThingsElements/things-meta#master",
-    "things-date-picker": "ThingsElements/things-date-picker#master",
-    "things-input-field": "ThingsElements/things-input-field#master",
-    "things-resource-combo": "ThingsElements/things-resource-combo#master",
-    "things-tristate-checkbox": "ThingsElements/things-tristate-checkbox#master",
-    "things-global-behavior": "ThingsElements/things-global-behavior#master",
-    "things-fullscreen": "ThingsElements/things-fullscreen#master",
-    "things-msg-box-behavior": "ThingsElements/things-msg-box-behavior#master",
-    "things-spinner": "ThingsElements/things-spinner#master",
+    "things-combo": "ThingsElements/things-combo",
+    "things-ajax": "ThingsElements/things-ajax",
+    "things-button": "ThingsElements/things-button",
+    "things-full-dialog": "ThingsElements/things-full-dialog",
+    "things-grid": "ThingsElements/things-grid",
+    "things-meta": "ThingsElements/things-meta",
+    "things-date-picker": "ThingsElements/things-date-picker",
+    "things-input-field": "ThingsElements/things-input-field",
+    "things-resource-combo": "ThingsElements/things-resource-combo",
+    "things-tristate-checkbox": "ThingsElements/things-tristate-checkbox",
+    "things-global-behavior": "ThingsElements/things-global-behavior",
+    "things-fullscreen": "ThingsElements/things-fullscreen",
+    "things-msg-box-behavior": "ThingsElements/things-msg-box-behavior",
+    "things-spinner": "ThingsElements/things-spinner",
     "paper-scroll-header-panel": "^2.0.0",
     "things-grid-behavior": "ThingsElements/things-grid-behavior#^2.2.12"
   },
